xforms/package/alt/xforms_forms.pp


    { Internal colormap size. Not really very meaningful as fl_mapcolor
     * and company allow color "leakage", that is, although only FL_MAX_COLS
     * are kept in the internal colormap, the server might have substantially
     * more colors allocated  }
    const
      FL_MAX_COLORS = 1024;      
      FL_MAX_COLS = FL_MAX_COLORS;      
    { FL graphics state information. Some are redundant.  }
    { current font in default GC  }
    { colormap valid for xvinfo  }
    { a valid window for xvinfo  }
    { visual class and color depth  }
    { primary color resolution  }
    { true if dithered color  }
    { true if colormap is not shared  }
    { working GC  }
    { GC used exclusively for text  }
    { A GC having a checkboard stipple  }
    { secondary lookup table  }
    type
      PFL_State = ^TFL_State;
      TFL_State = record
          xvinfo : PXVisualInfo;
          cur_fnt : PXFontStruct;
          colormap : TColormap;
          trailblazer : TWindow;
          vclass : longint;
          depth : longint;
          rgb_bits : longint;
          dithered : longint;
          pcm : longint;
          gc : array[0..15] of TGC;
          textgc : array[0..15] of TGC;
          dimmedGC : TGC;
          lut : array[0..(FL_MAX_COLS)-1] of dword;
          rshift : dword;
          rmask : dword;
          rbits : dword;
          gshift : dword;
          gmask : dword;
          gbits : dword;
          bshift : dword;
          bmask : dword;
          bbits : dword;
        end;
    { for compatibility  }

    const
      FL_STATE = FL_State;      
    {**** Global variables ***** }
      var
        fl_display : PDisplay;cvar;public;
        fl_screen : longint;cvar;public;
        fl_root : TWindow;cvar;public;
    { root window  }
        fl_vroot : TWindow;cvar;public;
    { virtual root window  }
    { screen dimension in pixels  }
        fl_scrh : longint;cvar;public;
        fl_vmode : longint;cvar;public;

    { was #define dname def_expr }
    function fl_visual : longint; { return type might be wrong }

    { was #define dname def_expr }
    function fl_colormap : longint; { return type might be wrong }

    { was #define dname(params) para_def_expr }
    { return type might be wrong }   
    function fl_get_visual : longint;    

    { was #define dname(params) para_def_expr }
    { return type might be wrong }   
    function fl_get_colormap : longint;    

    { Current version only runs in single visual mode  }
    { was #define dname(params) para_def_expr }
    { return type might be wrong }   
    function fl_get_vclass : longint;    

    { was #define dname(params) para_def_expr }
    { argument types are unknown }
    { return type might be wrong }   
    function fl_get_form_vclass(a : longint) : longint;    

    { was #define dname(params) para_def_expr }
    { return type might be wrong }   
    function fl_get_gc : longint;    

      var
        fl_state : PFL_State;cvar;public;
        fl_ul_magic_char : Pchar;cvar;public;
        fl_dpi : Tdouble;cvar;public;
    { was #define dname(params) para_def_expr }
    { return type might be wrong }   

    function fl_get_dpi : longint;    

function fl_mode_capable(mode:longint; warn:longint):longint;cdecl;external;
    { was #define dname(params) para_def_expr }
    { return type might be wrong }   
    function fl_default_win : longint;    

    { was #define dname(params) para_def_expr }
    { return type might be wrong }   
    function fl_default_window : longint;    

    { All pixmaps used by FL_OBJECT to simulate double buffering have the
     * following entries in the structure. FL_Coord x,y are used to shift
     * the origin of the drawing routines  }
    type
      PFL_pixmap_ = ^TFL_pixmap_;
      TFL_pixmap_ = record
          pixmap : TPixmap;
          win : TWindow;
          visual : PVisual;
          x : TFL_Coord;
          y : TFL_Coord;
          w : TFL_Coord;
          h : TFL_Coord;
          depth : longint;
          dbl_background : TFL_COLOR;
          pixel : TFL_COLOR;
        end;

    { Fonts related  }

    const
      FL_MAX_FONTSIZES = 10;      
      FL_MAX_FONTNAME_LENGTH = 80;      
    { cached fontstruct  }
    { cached sizes  }
    { cached so far  }
    { without size info  }
    type
      PFL_FONT = ^TFL_FONT;
      TFL_FONT = record
          fs : array[0..(FL_MAX_FONTSIZES)-1] of PXFontStruct;
          size : array[0..(FL_MAX_FONTSIZES)-1] of smallint;
          nsize : smallint;
          fname : array[0..(FL_MAX_FONTNAME_LENGTH+1)-1] of char;
        end;
    { Some basic drawing routines  }

      PFL_POINT = ^TFL_POINT;
      TFL_POINT = TXPoint;

      PFL_RECT = ^TFL_RECT;
      TFL_RECT = TXRectangle;
    { Rectangles  }

procedure fl_rectangle(fill:longint; x:TFL_Coord; y:TFL_Coord; w:TFL_Coord; h:TFL_Coord; 
                col:TFL_COLOR);cdecl;external;
procedure fl_rectbound(x:TFL_Coord; y:TFL_Coord; w:TFL_Coord; h:TFL_Coord; col:TFL_COLOR);cdecl;external;
    { was #define dname(params) para_def_expr }
    { argument types are unknown }
    { return type might be wrong }   
    function fl_rectf(x,y,w,h,c : longint) : longint;    

    { was #define dname(params) para_def_expr }
    { argument types are unknown }
    { return type might be wrong }   
    function fl_rect(x,y,w,h,c : longint) : longint;    

    { Rectangle with rounded-corners  }
procedure fl_roundrectangle(fill:longint; x:TFL_Coord; y:TFL_Coord; w:TFL_Coord; h:TFL_Coord; 
                col:TFL_COLOR);cdecl;external;
    { was #define dname(params) para_def_expr }
    { argument types are unknown }
    { return type might be wrong }   
    function fl_roundrectf(x,y,w,h,c : longint) : longint;    

    { was #define dname(params) para_def_expr }
    { argument types are unknown }
    { return type might be wrong }   
    function fl_roundrect(x,y,w,h,c : longint) : longint;    

    { General polygon and polylines  }
procedure fl_polygon(fill:longint; xp:PFL_POINT; n:longint; col:TFL_COLOR);cdecl;external;
    { was #define dname(params) para_def_expr }
    { argument types are unknown }
    { return type might be wrong }   
    function fl_polyf(p,n,c : longint) : longint;    

    { was #define dname(params) para_def_expr }
    { argument types are unknown }
    { return type might be wrong }   
    function fl_polyl(p,n,c : longint) : longint;    

(* error 
    do { fl_polygon( 1, p, n, c );            \
in declaration at line 1915 *)
(* error 
    do { fl_polygon( 1, p, n, c );            \
(* error 
         fl_polygon( 0, p, n, FL_BLACK );     \
in declaration at line 1916 *)
(* error 
         fl_polygon( 0, p, n, FL_BLACK );     \
(* error 
       } while( 0 )
in declaration at line 1921 *)
procedure fl_line(xi:TFL_Coord; yi:TFL_Coord; xf:TFL_Coord; yf:TFL_Coord; c:TFL_COLOR);cdecl;external;
procedure fl_point(x:TFL_Coord; y:TFL_Coord; c:TFL_COLOR);cdecl;external;
procedure fl_points(p:PFL_POINT; np:longint; c:TFL_COLOR);cdecl;external;
    const
      fl_simple_line = fl_line;      
(* Const before type ignored *)

procedure fl_dashedlinestyle(dash:Pchar; ndash:longint);cdecl;external;
procedure fl_update_display(block:longint);cdecl;external;
(* error 
    {                                                                         \
in declaration at line 1948 *)
(* error 
        FL_COORD fli_x = ( x ), fli_y = ( y );                                \
(* error 
        fl_line( fli_x, fli_y, fli_x + ( w ) - 1, fli_y + ( h ) - 1, ( c ) ); \
in declaration at line 1949 *)
(* error 
        fl_line( fli_x, fli_y, fli_x + ( w ) - 1, fli_y + ( h ) - 1, ( c ) ); \
(* error 
    } while ( 0 )
    { Line attributes  }
in declaration at line 1962 *)
procedure fl_linewidth(n:longint);cdecl;external;
procedure fl_linestyle(n:longint);cdecl;external;
procedure fl_drawmode(request:longint);cdecl;external;
function fl_get_linewidth:longint;cdecl;external;
function fl_get_linestyle:longint;cdecl;external;
function fl_get_drawmode:longint;cdecl;external;
    const
      fl_set_linewidth = fl_linewidth;      
      fl_set_linestyle = fl_linestyle;      
      fl_set_drawmode = fl_drawmode;      
    {* Ellipses * }

procedure fl_circ(x:TFL_COORD; y:TFL_COORD; r:TFL_COORD; col:TFL_COLOR);cdecl;external;
procedure fl_circf(x:TFL_COORD; y:TFL_COORD; r:TFL_COORD; col:TFL_COLOR);cdecl;external;
procedure fl_circbound(x:TFL_COORD; y:TFL_COORD; r:TFL_COORD; col:TFL_COLOR);cdecl;external;
procedure fl_oval(fill:longint; x:TFL_Coord; y:TFL_Coord; w:TFL_Coord; h:TFL_Coord; 
                col:TFL_COLOR);cdecl;external;
procedure fl_ovalbound(x:TFL_Coord; y:TFL_Coord; w:TFL_Coord; h:TFL_Coord; col:TFL_COLOR);cdecl;external;
procedure fl_ovalarc(fill:longint; x:TFL_Coord; y:TFL_Coord; w:TFL_Coord; h:TFL_Coord; 
                t0:longint; dt:longint; col:TFL_COLOR);cdecl;external;
    { was #define dname(params) para_def_expr }
    { argument types are unknown }
    { return type might be wrong }   
    function fl_ovalf(x,y,w,h,c : longint) : longint;    

    { was #define dname(params) para_def_expr }
    { argument types are unknown }
    { return type might be wrong }   
    function fl_ovall(x,y,w,h,c : longint) : longint;    

    const
      fl_oval_bound = fl_ovalbound;      
    { Arcs  }

procedure fl_arcf(x:TFL_COORD; y:TFL_Coord; r:TFL_COORD; a1:longint; a2:longint; 
                col:TFL_COLOR);cdecl;external;
procedure fl_arc(x:TFL_COORD; y:TFL_Coord; r:TFL_COORD; a1:longint; a2:longint; 
                col:TFL_COLOR);cdecl;external;
procedure fl_pieslice(fill:longint; x:TFL_Coord; y:TFL_Coord; w:TFL_Coord; h:TFL_Coord; 
                a1:longint; a2:longint; col:TFL_COLOR);cdecl;external;
    { High level drawing routines  }
    const
      fl_drw_frame = fl_draw_frame;      

procedure fl_draw_frame(style:longint; x:TFL_Coord; y:TFL_Coord; w:TFL_Coord; h:TFL_Coord; 
                c:TFL_COLOR; bw:longint);cdecl;external;
    {
     * Interfaces
      }
function fl_get_fontstruct(style:longint; size:longint):PXFontStruct;cdecl;external;
    const
      fl_get_font_struct = fl_get_fontstruct;      
      fl_get_fntstruct = fl_get_font_struct;      
